# MPX

./: .gitignore  CLAUDE.md  MPC.pptx  MPC地图代价.md  README.md  SDF_Pretraining_Plan.md  TODO.md  fix.py  pyproject.toml  resnet.py  test_load_terrain.py  train_sdf.sh  初学者上手指南_学习清单.md  文献.md  端到端视觉模块.md  视觉端到端MPC技术方案总结.md
.agents/rules/: anti-mpx.md
command/: train_sdf.sh
docs/: README.md  SDF-真值提取与采样策略.md  terrain_generation.md  terrain_migration_plan.md
mpx/: README.md
mpx/config/: README.md  config_r2.py  config_r2_stairs.py
mpx/data/: README.md
mpx/data/r2-1024/: CMakeLists.txt  README.md  package.xml
mpx/data/r2-1024/mjcf/: pd.xml  (+10 more)
mpx/examples/: README.md  diff_mpc_r2_viz.py  mjx_h1.py  mjx_r2.py  mjx_r2_heightmap.py  mjx_r2_rough_terrain.py  mjx_r2_stairs.py  mjx_r2_terrain.py  test_diff_mpc_r2.py  visualize_stairs.py  visualize_terrain.py  visualize_terrain_sampling.py
mpx/sdf_pretrain/: OPTIMIZATION_PLAN.md  README.md  __init__.py  test_data.py  test_sdf_prediction.py  test_vae_vis.py  train.py  train_vae.py  visualize_sampling.py  visualize_sampling_mjx.py
mpx/sdf_pretrain/data/: __init__.py  analytical_sdf.py  create_offline_dataset.py  dataset_generator.py  dynamic_terrain.py  scene_terrain_only.xml  transforms.py
mpx/sdf_pretrain/models/: __init__.py  losses.py  network.py  sdf_mlp.py  vae.py
mpx/terrain/: README.md  __init__.py  generator.py  get_indexes.py  heightmap.py  test_terrain_gen.py
mpx/terrain/wfc/: __init__.py  wfc.py
mpx/utils/: README.md  differentiable_mpc.py  models.py  mpc_wrapper.py  objectives.py  preview_stairs_terrain.py  preview_terrain.py  preview_terrain_dynamic.py  terrain_generator.py
test/: IFT.py  README.md  geometry_test.py  mpc_gradient_concept.py  sdf_visualizer.py  test_differentiable_mpc_ift.py  test_sdf_generator.py
(+51 files in other folders)
